06-despliegues/01-local/auth-ms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-ms
  template:
    metadata:
      labels:
        app: auth-ms
    spec:
      containers:
        - name: auth-container
          image: localhost:5000/auth-ms
          #Ifnotpresent sse decarga sino existe, como estoy probando es posible que haga cambios
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-svc
spec:
  selector:
    app: auth-ms
  ports:
    - port: 80
      #redirecciona a 8000
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
