06-despliegues/01-local/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq-container
          image: rabbitmq:3.8.9-management
          ports:
            - containerPort: 5672
            - containerPort: 15672
      restartPolicy: Always
      #siempre se reinicie si hay alguna falla
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-svc
spec:
  selector:
    app: rabbitmq
  ports:
    - port: 5672
      targetPort: 5672
      protocol: TCP
      nodePort: 30800
      name: data
    - port: 15672
      targetPort: 15672
      protocol: TCP
      nodePort: 30400
      name: ui
  type: NodePort
